Fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
 }
 
 .header {
+  display: block;
   z-index:2;
   top: 0;
   left: 0;
@@ -18,7 +19,7 @@ body {
 }
 
 .nav {
-  display: flex;
+  display: block;
   flex-direction: column;
   text-align: center;
   z-index:1;
@@ -48,10 +49,19 @@ body {
   color: whitesmoke;
   font-size: 3vh;
   margin-left: 2vw;
+  width:80%;
+  text-align: left;
+}
+
+.select {
+  background-color: red;
+  width:80%;
+  text-align: left;
 }
 
 .add {
   margin-top:3vh;
+  width: 10vw;
   background-color: rgb(53, 34, 34);
   color:white;
   padding: 10px 5px 10px 5px;
@@ -63,4 +73,10 @@ body {
 .add:hover {
   cursor: pointer;
   transform: scale(1.05);
+}
+
+.todo {
+  display: inline;
+margin-top: 18vh;
+margin-left: 50vw;
 }
